bluec-tests/tests/invalid/types_array/invalid_unary_expr.c
int main(void)
{
    int arr[3];
    ~arr;
    return 0;
}